0.001_8 (yyyy-mm-dd)

    API / Behaviour Changes:
        - None.

    New Features:
        - diff-bifcode command line utility

    Enhancements:
        - Clearer output format from diff_bifcode()

    Bug Fixes:
        - None.

    Dependencies:
        - None.

    Packaging:
        - None.

0.001_7 (2017-09-02)

    Dependencies:
        - Restore Perl 5.10 and 5.12 support by not using the /r regex
          and replace operator.

0.001_6 (2017-09-01)

    Bug Fixes:
        - Fix possible regex interpolation error on Perls >= 5.22
        - Fix float precision in tests

0.001_5 (2017-08-30)

    New Features:
        - Add diff_bifcode() function to aid debugging

    Enhancements:
        - Test that encode_bifcode doesn't strip utf8 flag from string
        - Decode integers as strings in support of infinite length
        - Make code dealing with floats more robust
        - Minor test improvements

    Packaging:
        - Add licence to meta data

0.001_4 (2017-08-11)

    Enhancements:
        - Minor documentation fixes.

    Dependencies:
        - Require Perl 5.10.0 for the defined-or (//) operator.

0.001_3 (2017-08-11)

    Bug Fixes:
        - Restore ability to encode infinite-length integers
        - Add missing strings to MANIFEST.SKIP

0.001_2 (2017-08-11)

    Enhancements:
        - Add Git repository to META info
        - Accept a wider range of float formats
        - Various small test and efficiency improvements

0.001_1 (2017-08-09)

    Initial Bifcode release (based heavily on Bencode)